Fix height issue on smaller devices

--- a/src/styles/queries.css
+++ b/src/styles/queries.css
@@ -86,6 +86,11 @@
     width: 100%;
   }
 
+  .app-container {
+    padding: 0rem 3.2rem;
+    height: 100vh;
+  }
+
   .app-logo {
     display: block;
     width: 15%;
@@ -93,9 +98,5 @@
 
   h1.app-title {
     font-size: 3rem;
-  }
-
-  .app-container {
-    padding: 0rem 3.2rem;
   }
 }
